# wormhole-scaffolding

./: CONTRIBUTING.md  LICENSE  README.md
.github/: dependabot.yml
docs/: 01_hello_world.md  02_hello_token.md  03_nft_burn_bridging.md  README.md
evm/: .gitignore  Makefile  README.md  TODO.md  foundry.toml  package-lock.json  package.json  testing.env
evm/forge-scripts/: deploy_01_hello_world.sol  deploy_02_hello_token.sol  deploy_contracts.sol  deploy_wormUSD.sol
evm/forge-test/01_hello_world/: HelloWorld.t.sol
evm/forge-test/02_hello_token/: HelloToken.t.sol
evm/forge-test/03_nft_burn_bridging/: NftBurnBridging.t.sol  TestHelpers.sol
evm/forge-test/hello-world/: HelloWorld.t.sol
evm/forge-test/helpers/: WormholeModifier.sol
evm/modules/: README.md
evm/modules/src/: WormholeModifier.sol  WormholeSimulator.sol
evm/shell-scripts/: make_ethers_types.sh  run_integration_tests.sh
evm/src/01_hello_world/: HelloWorld.sol  HelloWorldGetters.sol  HelloWorldMessages.sol  HelloWorldSetters.sol  HelloWorldState.sol  HelloWorldStructs.sol
evm/src/02_hello_token/: HelloToken.sol  HelloTokenGetters.sol  HelloTokenGovernance.sol  HelloTokenMessages.sol  HelloTokenSetters.sol  HelloTokenState.sol  HelloTokenStructs.sol
evm/src/03_nft_burn_bridging/: NftBurnBridging.sol
evm/src/interfaces/: ITokenBridge.sol  IWETH.sol  IWormhole.sol
evm/src/modules/token/: IWETH.sol  WormUSD.sol
evm/src/modules/utils/: BytesLib.sol
evm/src/modules/wormhole/: ITokenBridge.sol  IWormhole.sol  MockWormhole.sol  WormholeSimulator.sol
evm/src/token/: WormUSD.sol
evm/ts-test/: 00_environment.ts  00_wormhole.ts  01_hello_world.ts  02_hello_token.ts  0_wormhole.ts
evm/ts-test/helpers/: consts.ts  utils.ts
relayer/: README.md  package.json  tsconfig.json
relayer/src/: evm.ts  hello-world-contract.ts  index.ts  solana.ts  wormhole.ts
solana/: .gitignore  Anchor.toml  Anchor.toml.base  Cargo.toml  Makefile  README.md  TODO.md  package-lock.json  package.json  rust-toolchain  testing.env
solana/.cargo/: config.toml
solana/dependencies/: .gitignore  Makefile  README.md  checksum.txt
solana/modules/wormhole-anchor-sdk/: Cargo.toml
solana/modules/wormhole-anchor-sdk/src/: lib.rs
solana/modules/wormhole-anchor-sdk/src/token_bridge/: accounts.rs  constants.rs  instructions.rs  message.rs  mod.rs  program.rs
solana/modules/wormhole-anchor-sdk/src/wormhole/: accounts.rs  constants.rs  instructions.rs  message.rs  mod.rs  program.rs  types.rs  utils.rs
solana/modules/wormhole-solana-anchor/: Cargo.toml
solana/modules/wormhole-solana-anchor/src/: lib.rs
solana/modules/wormhole-solana-anchor/src/wormhole_program/: accounts.rs  constants.rs  instructions.rs  mod.rs  types.rs  utils.rs
solana/programs/: README.md
solana/programs/01_hello_world/: Cargo.toml
solana/programs/01_hello_world/src/: constants.rs  context.rs  env.rs  error.rs  lib.rs  message.rs
solana/programs/01_hello_world/src/state/: config.rs  foreign_emitter.rs  mod.rs  received.rs  wormhole_emitter.rs
solana/programs/01_hello_world/src/wormhole_program/: accounts.rs  instructions.rs  mod.rs  utils.rs
solana/programs/02_hello_token/: Cargo.toml
solana/programs/02_hello_token/src/: constants.rs  context.rs  env.rs  error.rs  lib.rs  message.rs
solana/programs/02_hello_token/src/state/: admin_config.rs  config.rs  foreign_contract.rs  mod.rs  received.rs  redeemer_config.rs  sender.rs  sender_config.rs  token_bridge_redeemer.rs  token_bridge_sender.rs
solana/programs/03_nft_burn_bridging/: Cargo.toml
solana/programs/03_nft_burn_bridging/src/: error.rs  instance.rs  lib.rs
solana/programs/03_nft_burn_bridging/src/instructions/: admin.rs  burn_and_send.rs  initialize.rs  mod.rs
solana/shell-scripts/: build_wormhole_repo_bpfs.sh
solana/ts/: generate_pid_bytes_file.ts
solana/ts/sdk/01_hello_world/: index.ts  program.ts
solana/ts/sdk/01_hello_world/accounts/: config.ts  foreignEmitter.ts  index.ts  received.ts  wormhole.ts  wormholeMessage.ts
solana/ts/sdk/01_hello_world/instructions/: index.ts  initialize.ts  receiveMessage.ts  registerEmitter.ts  registerForeignEmitter.ts  sendMessage.ts
solana/ts/sdk/02_hello_token/: program.ts
solana/ts/sdk/02_hello_token/accounts/: config.ts  foreignContract.ts  index.ts  redeemerConfig.ts  senderConfig.ts  tmpTokenAccount.ts  wormhole.ts
solana/ts/sdk/02_hello_token/instructions/: index.ts  initialize.ts  redeemNativeTransferWithPayload.ts  redeemWrappedTransferWithPayload.ts  registerForeignContract.ts  sendNativeTokensWithPayload.ts  sendWrappedTokensWithPayload.ts  types.ts  updateRelayerFee.ts
solana/ts/sdk/03_nft_burn_bridging/: index.ts
solana/ts/tests/: 00_environment.ts  00_wormhole.ts  01_hello_world.ts  02_hello_token.ts  03_nft_burn_bridging.ts
solana/ts/tests/helpers/: consts.ts  error.ts  index.ts  malicious.ts  utils.ts
sui/: .gitignore  Makefile  README.md  package.json  testing.env  tsconfig.json
sui/contracts/02_hello_token/: Move.devnet.toml  Move.localnet.toml  Move.toml
sui/contracts/02_hello_token/sources/: foreign_contracts.move  message.move  owner.move  relayer_fee.move  state.move  transfer.move  utils.move
sui/contracts/example_coins/: Makefile  Move.devnet.toml  Move.localnet.toml  Move.toml
sui/contracts/example_coins/sources/: coin_10.move  coin_8.move  coin_9.move
sui/contracts/hello_token/: Makefile  Move.devnet.toml  Move.mainnet.toml  Move.toml
sui/contracts/hello_token/sources/: foreign_contracts.move  owner.move  state.move  transfer.move
sui/dependencies/: .gitignore  token_bridge.Move.localnet.toml  wormhole.Move.localnet.toml
sui/dependencies/scripts/: deploy.sh
sui/env/: testing.env
sui/shell-scripts/: fetch_wormhole_contracts.sh  run_integration_tests.sh
sui/ts/scripts/: deploy-contract.ts
sui/ts/src/: consts.ts  index.ts  utils.ts  wormhole.ts
sui/ts/tests/: 00_environment.ts  02_hello_token.ts
sui/ts/tests/helpers/: consts.ts  error.ts  index.ts
sui/ts/tests/sui_config/: client.yaml  fullnode.yaml  genesis.blob  (+6 more)
tmp/: .gitignore  README.md  build_wormhole_sdk.sh
(+6 files in other folders)
