[package]
name = "wormhole-anchor-sdk"
version = "0.30.1-alpha.2"
description = "SDK using Anchor interfaces to interact with Wormhole Solana Programs"
edition = "2021"
authors = ["W7"]
license = "Apache-2.0"
homepage = "https://github.com/wormhole-foundation/wormhole-scaffolding"
repository = "https://github.com/wormhole-foundation/wormhole-scaffolding"

[features]
default = ["mainnet"]
mainnet = []
solana-devnet = []
tilt-devnet = []
token-bridge = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
cfg-if = "1.0.0"
wormhole-io = { workspace = true }

[dev-dependencies]
rand = "0.8"
