[package]
name = "wormhole-anchor-sdk"
version = "1.0.0"
description = "SDK using Anchor interfaces to interact with Wormhole Solana Programs"
edition = "2021"
authors = ["W7"]
license = "Apache-2.0"
homepage = "https://github.com/wormhole-foundation/wormhole-scaffolding"
repository = "https://github.com/wormhole-foundation/wormhole-scaffolding"

[features]
default = ["chain-id"]
mainnet = ["wormhole-svm-definitions/solana"]
solana-devnet = ["wormhole-svm-definitions/solana", "wormhole-svm-definitions/testnet"]
tilt-devnet = ["wormhole-svm-definitions/solana", "wormhole-svm-definitions/localnet"]
from-env = ["wormhole-svm-definitions/from-env"]
chain-id = ["wormhole-svm-definitions/chain-id"]
token-bridge = ["wormhole-svm-definitions/token-bridge"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

# for older anchors that don't support the custom discriminator. the IDL will
# not be correct then, but at least it builds
no-custom-discriminator = []

[dependencies]
anchor-lang = { version = "0" }
anchor-spl = { version = "0" }
# NOTE: this is the `main` commit at the time of writing.
wormhole-svm-definitions = { git = "https://github.com/wormhole-foundation/wormhole", rev = "325cca4b628f17536f54b079eeb82b41247bfbef" }
cfg-if = "1.0.0"
wormhole-io = { workspace = true }

[dev-dependencies]
rand = "0.8"
