[package]
name = "hello-token"
version = "0.1.0"
description = "02 - Hello Token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hello_token"

[features]
default = ["mainnet"]
mainnet = ["wormhole-anchor-sdk/mainnet"]
testnet = ["wormhole-anchor-sdk/solana-devnet"]
devnet = ["wormhole-anchor-sdk/tilt-devnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "wormhole-anchor-sdk/idl-build",
]

[dependencies]
solana-program = "1.18.17"
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
wormhole-anchor-sdk = { path = "../../modules/wormhole-anchor-sdk", default-features = false, features = [
    "token-bridge",
] }
wormhole-io = { workspace = true }
