[package]
name = "nft-burn-bridging"
version = "0.1.0"
description = "03 - NFT Burn Bridging"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_burn_bridging"

[features]
default = ["mainnet"]
mainnet = ["wormhole-anchor-sdk/mainnet"]
testnet = ["wormhole-anchor-sdk/solana-devnet"]
devnet = ["wormhole-anchor-sdk/tilt-devnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
solana-program = "1.16.16"
anchor-lang = { version = "0.28.0", features=["init-if-needed"]}
anchor-spl = { version = "0.28.0", features = [ "metadata" ] }
mpl-token-metadata = { version = "1.13.2", features = [ "no-entrypoint" ] }
wormhole-anchor-sdk = { version = "0.1.0-alpha.2", default-features = false }
