[package]
name = "nft-burn-bridging"
version = "0.1.0"
description = "03 - NFT Burn Bridging"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_burn_bridging"

[features]
default = ["mainnet"]
mainnet = ["wormhole-anchor-sdk/mainnet"]
testnet = ["wormhole-anchor-sdk/solana-devnet"]
devnet = ["wormhole-anchor-sdk/tilt-devnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "wormhole-anchor-sdk/idl-build",
]

[dependencies]
solana-program = "2.1.0"
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
mpl-token-metadata = { version = "5" }
wormhole-anchor-sdk = { path = "../../modules/wormhole-anchor-sdk", default-features = false }
